# booking-management

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sql_app.db
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: booking.py
app/crud/: crud.py
app/database/: db.py  models.py
app/schemas/: booking.py
app/tests/: conftest.py  test_app.py
static/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
static/src/: App.css  App.test.tsx  App.tsx
static/src/api/: api.ts
static/src/components/: AddBookingDialog.tsx  BookingTable.tsx  Dashboard.vue  Navbar.tsx
static/src/interfaces/: Booking.ts
