# Black formatter options

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.idea
    | \.vscode
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
    | \.aws-sam
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Prgic Vila"
authors = ["Valentin Vareskic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pre-commit = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
